P2/Arrays/01/var/archive/xmlreports/0/0/4/000131
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="131" judge-id="6" status="CE" scoring="ACM" run-tests="0" contest-id="201" compile-error="yes" >
  <uuid>de20c210-5d20-4808-9ecf-00460d7fdbd3</uuid>
  <compiler_output>000131.cpp:1:1: error: expected unqualified-id
/rightcode\
^
1 error generated.
</compiler_output>
</testing-report>
